--- a/xLib-V100.csproj
+++ b/xLib-V100.csproj
@@ -62,8 +62,8 @@
     <Reference Include="System.Text.Encodings.Web, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\CSharp_DevicePattern\packages\System.Text.Encodings.Web.8.0.0\lib\net462\System.Text.Encodings.Web.dll</HintPath>
     </Reference>
-    <Reference Include="System.Text.Json, Version=8.0.0.3, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\CSharp_DevicePattern\packages\System.Text.Json.8.0.3\lib\net462\System.Text.Json.dll</HintPath>
+    <Reference Include="System.Text.Json, Version=8.0.0.4, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\CSharp_DevicePattern\packages\System.Text.Json.8.0.4\lib\net462\System.Text.Json.dll</HintPath>
     </Reference>
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\CSharp_DevicePattern\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
@@ -111,6 +111,7 @@
     <Compile Include="Components\Peripherals\Controls\GSM\Types.cs" />
     <Compile Include="Components\Peripherals\Controls\MQTT\Instance.cs" />
     <Compile Include="Components\Peripherals\Base\PeripheralBase.cs" />
+    <Compile Include="Components\Peripherals\Controls\MQTT\Types.cs" />
     <Compile Include="Components\Peripherals\Transactions\Control\Control.cs" />
     <Compile Include="Components\Peripherals\Transactions\Ethernet\Control.cs" />
     <Compile Include="Components\Peripherals\Transactions\GSM\Control.cs" />
@@ -163,7 +164,7 @@
     <Compile Include="Components\Peripherals\Controls\xCAN\Info.cs" />
     <Compile Include="Components\Peripherals\Controls\xGPIO\Control.cs" />
     <Compile Include="Components\Peripherals\Controls\xGPIO\Info.cs" />
-    <Compile Include="Components\Peripherals\Controls\MQTT\MQTT.cs" />
+    <Compile Include="Components\Peripherals\Controls\MQTT\Mqtt.cs" />
     <Compile Include="Components\Peripherals\Controls\MQTT\Info.cs" />
     <Compile Include="Components\Peripherals\Controls\Ethernet\Ethernet.cs" />
     <Compile Include="Components\Peripherals\Controls\Ethernet\Info.cs" />
