--- a/xLib-V100.csproj
+++ b/xLib-V100.csproj
@@ -92,19 +92,26 @@
     <Compile Include="Attributes\ModelAttribute.cs" />
     <Compile Include="Attributes\ModelFunctionAttribute.cs" />
     <Compile Include="Attributes\ModelPropertyAttribute.cs" />
+    <Compile Include="Attributes\SynchronizedPropertySelectorAttribute.cs" />
     <Compile Include="Attributes\SubmodelAttribute.cs" />
     <Compile Include="Common\DataBuffer.cs" />
+    <Compile Include="Common\EnumHelper.cs" />
     <Compile Include="Common\Json.cs" />
+    <Compile Include="Common\ValueConverter.cs" />
     <Compile Include="Common\xCircularBuffer.cs" />
     <Compile Include="Common\xConverter.cs" />
     <Compile Include="Common\xMath.cs" />
     <Compile Include="Common\xMemory.cs" />
     <Compile Include="Common\xSupport.cs" />
     <Compile Include="Components\MQTT\Broker\Control.cs" />
+    <Compile Include="Attributes\SynchronizedPropertyAttribute.cs" />
     <Compile Include="Components\Peripherals\Base\Control.cs" />
+    <Compile Include="Components\Peripherals\Base\Types.cs" />
     <Compile Include="Components\Peripherals\Controls\Ethernet\Instance.cs" />
     <Compile Include="Components\Peripherals\Controls\Ethernet\Types.cs" />
+    <Compile Include="Components\Peripherals\Controls\GSM\FunctionsArguments.cs" />
     <Compile Include="Components\Peripherals\Controls\GSM\Gsm.cs" />
+    <Compile Include="Components\Peripherals\Controls\GSM\Info.cs" />
     <Compile Include="Components\Peripherals\Controls\GSM\Instance.cs" />
     <Compile Include="Components\Peripherals\Base\Instance.cs" />
     <Compile Include="Components\Peripherals\Controls\GSM\Mqtt.cs" />
@@ -117,6 +124,7 @@
     <Compile Include="Components\Peripherals\Transactions\GSM\Control.cs" />
     <Compile Include="Components\Peripherals\Transactions\GSM\Types.cs" />
     <Compile Include="Components\Peripherals\Transactions\MQTT\Control.cs" />
+    <Compile Include="Adaptation\SynchronizedProperty.cs" />
     <Compile Include="Net\MQTT\MqttBroker.cs" />
     <Compile Include="Net\MQTT\MqttBrokerOptions.cs" />
     <Compile Include="Net\MQTT\MqttBrokerTopic.cs" />
